--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "files.associations": {
         "sprite_definitions.h": "c",
         "system_constants.h": "c",
-        "input_helpers.h": "c"
+        "input_helpers.h": "c",
+        "credits.h": "c"
     }
 }
