--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,10 +21,10 @@ jobs:
           path: ./rom
       - run: 
           name: Upload to version number in s3
-          command: aws s3 cp --region us-east-1 ./rom/we-must-go-derper.nes s3://cpprograms-nes-games-https/ld48/$CIRCLE_BRANCH/ld44.$CIRCLE_BUILD_NUM.nes --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers
+          command: aws s3 cp --region us-east-1 ./rom/through-dimensions.nes s3://cpprograms-nes-games-https/ld48/$CIRCLE_BRANCH/ld44.$CIRCLE_BUILD_NUM.nes --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers
       - run: 
           name: Replace "latest" rom file in s3
-          command: aws s3 cp --region us-east-1 ./rom/we-must-go-derper.nes s3://cpprograms-nes-games-https/ld48/$CIRCLE_BRANCH/ld44.latest.nes --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers
+          command: aws s3 cp --region us-east-1 ./rom/through-dimensions.nes s3://cpprograms-nes-games-https/ld48/$CIRCLE_BRANCH/ld44.latest.nes --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers
 
 workflows:
   version: 2
